# Rengine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Rengine.sln
Game/: CMakeLists.txt  game.cpp
Libs/include/chibi/: install.h
Rengine/: CMakeLists.txt  Rengine.cpp  Rengine.vcxproj  Rengine.vcxproj.filters  game.cpp
Rengine/Debug/: vc142.idb
Rengine/Debug/Rengine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Rengine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Rengine/Events/: CollisionEvent.h  Event.h  EventHandler.cpp  EventHandler.h  EventManager.cpp  EventManager.h  KeyDownEvent.h  KeyEvent.h
Rengine/Rendering/: Renderer.cpp  SpriteBatch.cpp  SpriteBatch.h
Rengine/Scene/: Node.cpp  Node.h
Rengine/Scripting/: SchemeBindings.cpp  SchemeBindings.h  ScriptEngine.cpp  ScriptEngine.h
Rengine/Scripts/: EventTypes.scm  main.janet  main.scm
Rengine/Util/: file.h
Rengine/include/Components/: Components.h
Rengine/include/Events/: CollisionEvent.h  Event.h  EventManager.h  KeyEvent.h
Rengine/include/Rendering/: Renderer.h  SpriteBatch.h
Rengine/include/Scene/: EntityManager.h
Rengine/include/Scripting/: SchemeBindings.h  ScriptEngine.h
Rengine/include/Util/: Logging.h  file.h
Rengine/src/Events/: EventHandler.cpp  EventManager.cpp
Rengine/src/Rendering/: Renderer.cpp  SpriteBatch.cpp
Rengine/src/Scene/: EntityManager.cpp  Node.cpp
Rengine/src/Scripting/: SchemeBindings.cpp  ScriptEngine.cpp
x64/Debug/: Rengine.exp  Rengine.ilk  Rengine.lib
x64/Debug/Scripts/: main.scm
